[project]
name = "vessel-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "chromadb==0.5.5",
    "langchain==0.2.16",
    "langchain-chroma>=0.1.2",
    "langchain-community==0.2.16",
    "langchain-huggingface>=0.0.3",
    "posthog>=7.9.12",
    "pydantic>=2.12.5",
    "pypdf==4.3.1",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "unstructured>=0.18.32",
]
